<!--
  ~ Copyright (c) 2017 Nicholas van Dyke. All rights reserved.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Sia </string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="unlock_wallet">Unlock wallet</string>
    <string name="lock_wallet">Lock wallet</string>
    <string name="create_wallet">Create wallet</string>
    <string name="view_addresses">View addresses</string>
    <string name="view_seeds">View seeds</string>
    <string name="sweep_seed">Sweep seed</string>
    <string name="change_password">Change password</string>
    <string name="hosting">Hosting</string>
    <string name="wallet">Wallet</string>
    <string name="terminal">Terminal</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="seed">Seed</string>
    <string name="sweep">Sweep</string>
    <string name="seed_warning">Keep your seed(s) safe, and record them elsewhere. Your wallet\'s funds are tied to its seed, and you\'ll need it to recover your funds or load your wallet on another device.</string>
    <string name="recipient_address">Recipient address</string>
    <string name="amount_sc">Amount (SC)</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="loading">Loading…</string>
    <string name="not_synced">Not synced</string>
    <string name="password">Password</string>
    <string name="unlock">Unlock</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change">Change</string>
    <string name="create">Create</string>
    <string name="confirm_password">Confirm password</string>
    <string name="synced">Synced</string>
    <string name="syncing">Syncing</string>
    <string name="close">Close</string>
    <string name="renter">Renter</string>

    <string name="terminal_warning" tools:ignore="TypographyDashes">ADVANCED:\nThis terminal uses siac as its backend. Siac is a command-line utility written by the
        Sia developers that can interface with all of Sia\'s API endpoints; you can type --help and press enter for a list
        of commands. The purpose of this terminal and its use of siac is to make available to you commands that might not
        yet be part of the mobile graphical interface. While siac is fully functional on a computer, very little testing of
        it has been done on a mobile device. Functionality is not guaranteed. Use at your own risk.\n\n</string>

    <string name="purchase_explanation">Sia for Android operates on subscriptions, and is still in heavy
        development. By subscribing, you\'ll support development, and gain access to all features,
        including new ones as they\'re added. 7 day free trial. Easily cancellable at any time from Settings.</string>

    <string name="purchase_explanation_extra">Note: this is independent of any costs incurred by the Sia network, such as transaction and renting fees.</string>

    <string name="intro_completely_private_desc">Sia encrypts and distributes your files across a decentralized network. You control your private encryption keys and you own your data. No outside company or third party can access or control your files, unlike traditional cloud storage providers.</string>
    <string name="intro_far_more_affordable_desc">On average, Sia\'s decentralized cloud storage costs significantly less than incumbent cloud storage providers. Storing 1TB of files on Sia costs about $2 per month, compared to $10 on Google Drive.</string>
    <string name="intro_highly_redundant_desc">Sia distributes and stores redundant file segments on nodes across the globe, eliminating any single point of failure and ensuring uptime that rivals traditional cloud storage providers.</string>
    <string name="intro_blockchain_marketplace_desc">Using the Sia blockchain, Sia creates a decentralized storage marketplace in which hosts compete for your business, which leads to the lowest possible prices. Renters pay using Siacoin, which can also be mined and traded.</string>
    <string name="intro_open_source_desc">Sia’s software is completely open source, with contributions from leading software engineers and a thriving community of developers building innovative applications on the Sia API, such as this app!</string>

    <string name="intro_notes_about_app">\u2022 I, the developer, am not affiliated with Nebulous Labs\n
    \u2022 The Sia node will initially have to download, process, and store the Sia blockchain, which is about 11GB
    \u2022 This app's source code is available on GitHub</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
