<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Nicholas van Dyke. All rights reserved.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/newPasswordCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/confirmNewPasswordCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/newPasswordCreate"
        app:layout_constraintEnd_toEndOf="@+id/newPasswordCreate"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordCreate" />

    <CheckBox
        android:id="@+id/walletCreateForce"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="Force"
        app:layout_constraintStart_toStartOf="@+id/confirmNewPasswordCreate"
        app:layout_constraintTop_toBottomOf="@+id/walletCreateFromSeed" />

    <CheckBox
        android:id="@+id/walletCreateFromSeed"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="Create from existing seed"
        app:layout_constraintStart_toStartOf="@+id/confirmNewPasswordCreate"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordCreate" />

    <EditText
        android:id="@+id/walletCreateSeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/seed"
        android:inputType="textNoSuggestions|textVisiblePassword"
        app:layout_constraintBottom_toBottomOf="@+id/walletCreateFromSeed"
        app:layout_constraintStart_toEndOf="@+id/walletCreateFromSeed"
        app:layout_constraintEnd_toEndOf="@+id/confirmNewPasswordCreate"
        app:layout_constraintTop_toTopOf="@+id/walletCreateFromSeed" />

    <TextView
        android:id="@+id/walletCreateForceWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Warning: this will overwrite\nany existing wallet"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/walletCreateForce"
        app:layout_constraintStart_toEndOf="@+id/walletCreateForce"
        app:layout_constraintTop_toTopOf="@+id/walletCreateForce" />

    <Button
        android:id="@+id/walletCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/create"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walletCreateForce" />
</android.support.constraint.ConstraintLayout>