<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Nicholas van Dyke
  ~
  ~ This file is subject to the terms and conditions defined in 'LICENSE.md'
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <Button
        android:text="@string/send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sendButton"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/receiveButton"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/balanceText"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <Button
        android:text="@string/receive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/receiveButton"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/sendButton"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/sendButton"/>

    <TextView
        android:text="@string/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balanceText"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:text="SC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scNote"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/balanceText"
        app:layout_constraintBaseline_toBaselineOf="@+id/balanceText"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"/>

    <com.daimajia.numberprogressbar.NumberProgressBar
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/syncBar"
        style="@style/NumberProgressBar_Grace_Yellow"
        custom:progress_unreached_color="#d6d6d6"
        custom:progress_reached_color="@color/colorAccent"
        custom:progress_text_color="?android:attr/textColorPrimary"
        custom:progress_unreached_bar_height="3dp"
        custom:progress_reached_bar_height="3dp"
        custom:progress_text_size="14sp"
        custom:progress_text_offset="1dp"
        android:layout_width="0dp"
        android:layout_height="12dp"
        custom:layout_constraintRight_toRightOf="@+id/receiveButton"
        custom:layout_constraintBottom_toTopOf="@+id/receiveButton"
        android:layout_marginBottom="8dp"
        custom:layout_constraintLeft_toLeftOf="@+id/receiveButton"
        custom:progress_current="0"/>

    <TextView
        android:text="@string/not_synced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/syncText"
        app:layout_constraintRight_toRightOf="@+id/syncBar"
        android:textAlignment="textEnd"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/syncBar" />

    <TextView
        android:text="@string/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balanceUnconfirmed"
        app:layout_constraintTop_toBottomOf="@+id/scNote"
        app:layout_constraintLeft_toLeftOf="@+id/balanceText"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="2dp"/>

    <TextView
        android:text="@string/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balanceUsdText"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/balanceUnconfirmed"
        app:layout_constraintLeft_toLeftOf="@+id/balanceUnconfirmed"/>

    <View
        android:id="@+id/top_shadow"
        android:background="@drawable/top_shadow"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@+id/transactionListSwipe"
        app:layout_constraintRight_toRightOf="@+id/transactionListSwipe"
        app:layout_constraintLeft_toLeftOf="@+id/transactionListSwipe"
        android:alpha="0.8"
        android:layout_height="4dp"/>

    <vandyke.siamobile.ui.custom.SwipeableFrameLayout
        android:id="@+id/expandableFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiveButton"></vandyke.siamobile.ui.custom.SwipeableFrameLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/transactionListSwipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expandableFrame">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/transactionList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:indeterminate="true"
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:scaleY="5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="-2dp"
        app:layout_constraintBottom_toTopOf="@+id/transactionListSwipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</android.support.constraint.ConstraintLayout>